--- a/Dom/index.html
+++ b/Dom/index.html
@@ -21,7 +21,7 @@
       <body>
         <section class="container">
           <div class="logo">
-            <img src="images/logo.png" alt="Learn with Sumit" />
+            <img src="images/logo.png" alt="Images" />
           </div>
           <h1 id="header" class="header">To-Do App</h1>
     
