--- a/Dom/index.html
+++ b/Dom/index.html
@@ -42,7 +42,9 @@
               </li>
               <li class="item">
                 <input type="checkbox" /><label>Task Name</label>
+                
               </li>
+              <input type="submit">
             </ul>
           </div>
           <!--/todo-list-->
