--- a/Dom/index.html
+++ b/Dom/index.html
@@ -42,6 +42,9 @@
               </li>
               <li class="item">
                 <input type="checkbox" /><label>Task Name</label>
+              </li>
+              <li class="item">
+                <input type="checkbox" /><label>Task Name</label>
                 
               </li>
               <input type="submit">
