--- a/Dom/index.html
+++ b/Dom/index.html
@@ -19,6 +19,7 @@
         <link rel="stylesheet" href="style.css" />
       </head>
       <body>
+        <!-- dom html -->
         <section class="container">
           <div class="logo">
             <img src="images/logo.png" alt="Images" />
