--- a/Dom/index.html
+++ b/Dom/index.html
@@ -24,7 +24,7 @@
           <div class="logo">
             <img src="images/logo.png" alt="Images" />
           </div>
-          <h1 id="header" class="header">To-Do App</h1>
+          <h1 id="header" class="header">To-Do Apps</h1>
     
           <form class="new-task-container box">
             <label for="new-task">Add New Task</label>
